# solLambda

./: .example.env  .github.env  .gitignore  .pre-commit-config.yaml  README.md  app.py  calendar_script.py  cron_therapists_update.py  fix_database.py  lambda-permissions.json  migrate.py  migration_helper.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  response.json  serverless.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/generate-class/: action.yml
.github/workflows/: be-deploy.yml  check_pipeline.yml  lint.yml  tests.yml
migrations/: env.py
migrations/versions/: 1.0.1_add_payment_type.py  1.0.2_add_payment_type_final.py  1d22f0b133d6_add_utm_field_to_client.py  7b35559a7414_add_calendar_fetched_to_therapist.py  7c43f0387b8c_add_calendar_email_field_to_therapist.py  89dd2d1e127a_add_payment_type_to_signup_form.py  8c222d8a6a10_add_discount_field_to_signup_form.py  c9f2e31a1caf_add_diagnoses_specialities_to_therapist.py  e37712086672_add_therapist_name_to_signup_form.py
models/: appointments.py  base.py  calendar.py  client_match.py  clients.py  therapist_s3.py  therapists.py  user.py
routes/: airtable.py  appointments.py  clients.py  therapists.py
src/: __init__.py  app.py
src/db/: database.py
src/models/api/: base.py  (+12 more)
src/routes/: __init__.py  appointments.py  client_forms.py  client_signup_forms.py  clients.py  emails.py  events.py  intakeq_forms.py  therapist_video.py  therapists.py
src/utils/: calendar_utils.py  email_sender.py  event_utils.py  google_calendar.py  invite_sender.py  logger.py  matching_algorithm.py  request_utils.py  rrule_utils.py  s3.py  settings.py  states_utils.py  therapist_data_utils.py  typeform_utils.py  working_hours.py
templates/: calendar_description.html
tests/: matching_algorithm_test.py  suitable_age_test.py  test_intakeq_clients.py  therapist_slots_test.py
utils/: flask_utils.py  google_calendar.py  matching_algorithm.py  request_utils.py  s3.py  settings.py  typeform_utils.py
utils/intakeq_bot/: bot.py  const.py  web.py
(+32 files in other folders)
